@@ -1,5 +1,10 @@
 2012-04-07  Bob Halley  <halley@dnspython.org>
 
+	* dns/zone.py (from_xfr): dns.zone.from_xfr() now takes a
+	  'check_origin' parameter which defaults to True.  If set to
+	  False, then dnspython will not make origin checks on the zone.
+	  Thanks to Carlos Perez for the report.
+
 	* dns/rdtypes/ANY/SSHFP.py (SSHFP.from_text): Allow whitespace in
 	  the text string.  Thanks to Jan Andres for the report and the
 	  patch.
